--- a/WolvenKit/Views/Shell/RibbonView.xaml
+++ b/WolvenKit/Views/Shell/RibbonView.xaml
@@ -588,6 +588,32 @@
             <fluent:RibbonTabItem Header="Options">
 
                 <fluent:RibbonGroupBox Header="General">
+                    <fluent:Button
+                     Click="Button_Click"
+                     Header="GPU Settings"
+                     Visibility="Collapsed"
+                     >
+                        <fluent:Button.LargeIcon>
+                            <iconPacks:PackIconBootstrapIcons
+                             Width="25"
+                             Height="25"
+                             HorizontalAlignment="Stretch"
+                             VerticalAlignment="Stretch"
+                             Kind="Gear"
+                             />
+                        </fluent:Button.LargeIcon>
+                        <fluent:Button.Icon>
+                            <iconPacks:PackIconBootstrapIcons
+                             Width="25"
+                             Height="25"
+                             HorizontalAlignment="Stretch"
+                             VerticalAlignment="Stretch"
+                             Kind="Gear"
+                             />
+                        </fluent:Button.Icon>
+                    </fluent:Button>
+
+
                     <fluent:Button Command="{catel:CommandManagerBinding Application.ShowSettings}" Header="Settings">
                         <fluent:Button.LargeIcon>
                             <iconPacks:PackIconCodicons
