Assetbrowser breadcrumb navigation
- Still needs themeing

--- a/WolvenKit/Views/Editor/Basic/AssetBrowserView.xaml
+++ b/WolvenKit/Views/Editor/Basic/AssetBrowserView.xaml
@@ -631,16 +631,12 @@
                              Style="{StaticResource ButtonIcon}"
                              />
 
-
-                            <hc:TextBox
-                             Width="auto"
-                             Margin="0,5,0,0"
-                             HorizontalAlignment="Left"
-                             VerticalAlignment="Top"
-                             IsManipulationEnabled="False"
-                             IsReadOnly="True"
-                             Text="{Binding Path=CurrentNode.FullPath, Mode=OneWay}"
-                             />
+                            <feather:TreeBreadcrumb
+                                VerticalAlignment="Top"
+                                CurrentNode="{Binding Path=BreadCrumbCurrentNode}"
+                                PathSeparator="\"
+                                SetCurrentNodeCommand="{Binding Path=SetCurrentNodeCommand}"
+                            />
 
 
 
