--- a/WolvenKit/Views/Dialogs/SimpleMeshExporterDialog.xaml
+++ b/WolvenKit/Views/Dialogs/SimpleMeshExporterDialog.xaml
@@ -221,7 +221,7 @@
             <Grid>
                 <Expander
                  Background="{DynamicResource RegionBrush}"
-                 Header="Advanced Export"
+                 Header="Advanced Export (Experimental)"
                  IsEnabled="True"
                  >
                     <hc:ScrollViewer>
